tests/unit/fake_data_root/openstack/sos_commands/networking/ip_netns_exec_snat-984c22fd-64b3-4fa1-8ddd-87090f401ce5_iptables-save
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*raw
:PREROUTING ACCEPT [306:14613]
:OUTPUT ACCEPT [18:720]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*nat
:PREROUTING ACCEPT [23:1265]
:INPUT ACCEPT [2:368]
:OUTPUT ACCEPT [1:40]
:POSTROUTING ACCEPT [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
:neutron-l3-agent-float-snat - [0:0]
:neutron-l3-agent-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A neutron-l3-agent-POSTROUTING ! -o qg-14f81a43-69 -m conntrack ! --ctstate DNAT -j ACCEPT
-A neutron-l3-agent-snat -j neutron-l3-agent-float-snat
-A neutron-l3-agent-snat -o qg-14f81a43-69 -j SNAT --to-source 10.100.0.204 --random-fully
-A neutron-l3-agent-snat -m mark ! --mark 0x2/0xffff -m conntrack --ctstate DNAT -j SNAT --to-source 10.100.0.204 --random-fully
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-l3-agent-snat
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*mangle
:PREROUTING ACCEPT [304:14533]
:INPUT ACCEPT [285:13716]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [18:720]
:POSTROUTING ACCEPT [18:720]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
:neutron-l3-agent-float-snat - [0:0]
:neutron-l3-agent-floatingip - [0:0]
:neutron-l3-agent-mark - [0:0]
:neutron-l3-agent-scope - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
-A neutron-l3-agent-POSTROUTING -o qg-14f81a43-69 -m connmark --mark 0x0/0xffff0000 -j CONNMARK --save-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-mark
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-scope
-A neutron-l3-agent-PREROUTING -m connmark ! --mark 0x0/0xffff0000 -j CONNMARK --restore-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-floatingip
-A neutron-l3-agent-float-snat -m connmark --mark 0x0/0xffff0000 -j CONNMARK --save-mark --nfmask 0xffff0000 --ctmask 0xffff0000
-A neutron-l3-agent-mark -i qg-14f81a43-69 -j MARK --set-xmark 0x2/0xffff
-A neutron-l3-agent-scope -i sg-189f4c40-9d -j MARK --set-xmark 0x4000000/0xffff0000
-A neutron-l3-agent-scope -i qg-14f81a43-69 -j MARK --set-xmark 0x4000000/0xffff0000
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*filter
:INPUT ACCEPT [285:13716]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [18:720]
:neutron-filter-top - [0:0]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-local - [0:0]
:neutron-l3-agent-scope - [0:0]
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A neutron-filter-top -j neutron-l3-agent-local
-A neutron-l3-agent-FORWARD -j neutron-l3-agent-scope
-A neutron-l3-agent-scope -o sg-189f4c40-9d -m mark ! --mark 0x4000000/0xffff0000 -j DROP
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
